toolsincldir=$(includedir)/votca/tools

toolsincl_HEADERS = \
application.h average.h         cubicspline.h     histogramnew.h   matrix.h         random.h       tokenizer.h \
correlate.h       datacollection.h  objectfactory.h  rangeparser.h  types.h \
crosscorrelate.h  histogram.h       version.h        property.h       table.h        vec.h linalg.h \
parsexml.h mutex.h thread.h

