csgincludedir=$(includedir)/votca/csg
csginclude_HEADERS = \
bead.h beadlist.h beadpair.h beadtype.h boundarycondition.h cgengine.h \
cgmoleculedef.h cgobserver.h csgapplication.h exclusionlist.h \
fileformatfactory.h imcio.h interaction.h map.h molecule.h nblistgrid.h \
nblist.h nematicorder.h openbox.h orthorhombicbox.h pairlist.h \
residue.h topology.h topologyitem.h topologymap.h topologyreader.h \
trajectoryreader.h trajectorywriter.h triclinicbox.h version.h
