toolsincldir=$(includedir)/votca/tools

toolsincl_HEADERS = \
akimaspline.h application.h average.h correlate.h crosscorrelate.h \
cubicspline.h datacollection.h easylock.h histogram.h histogramnew.h \
linalg.h linspline.h matrix.h mutex.h objectfactory.h parsexml.h \
property.h random.h rangeparser.h spline.h table.h thread.h tokenizer.h \
types.h vec.h version.h lexical_cast.h
