option(EXTERNAL_BOOST "Use external boost" ON)
if (EXTERNAL_BOOST)
  find_package(Boost 1.42.0 REQUIRED COMPONENTS program_options )
  include_directories(${Boost_INCLUDE_DIRS})
  set (BOOST_LIBRARY ${Boost_PROGRAM_OPTIONS_LIBRARY})
  set (BOOST_PKG)
  set (BOOST_INCLUDE_DIR_PKG ${Boost_INCLUDE_DIRS})
  string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "\\2" BOOST_LIB_PKG ${BOOST_LIBRARY})
  set(BOOST_LIB_DIR_PKG ${CMAKE_MATCH_1})
else(EXTERNAL_BOOST)
  include_directories(${CMAKE_SOURCE_DIR}/src/libboost)
  add_subdirectory(libboost)
  set (BOOST_LIBRARY votca_boost)
  set (BOOST_PKG "libvotca_boost")
  set (BOOST_INCLUDE_DIR_PKG)
  set (BOOST_LIB_PKG)
  set (BOOST_LIB_DIR_PKG)
endif(EXTERNAL_BOOST)
add_subdirectory(libtools)
